[tool.poetry]
name = "trip-planner-2"
version = "0.1.0"
description = "Simple AI trip planner"
authors = ["Joao Moura, PS"]

[tool.poetry.dependencies]
python = "^3.10"

crewai = "^0.11.2"
langchain = "^0.1.14"
langchain-openai = "^0.0.5"
langchainhub = "^0.1.15"
pydantic = "^2.4"
python-dotenv = "^1.0.0"   
setuptools = "^80.9.0"




[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



