[tool.poetry]
name = "trip-planner-2"
version = "0.1.0"
description = "Simple AI trip planner"
authors = ["Joao Moura, PS"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "0.28.6"
langchain = "0.1.17"
langchain-community = "^0.0.36"
langchain-google-genai = "^0.0.6"
google-generativeai = ">=0.3.1,<0.4.0"
python-dotenv = "^1.0.0"
pydantic = ">=2.4.2,<3.0.0"





[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



